DEV: avoid constructors for primitive wrappers